--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -421,8 +421,8 @@ img, img:hover {
             color: #fff;
             padding: 4px 20px;
             margin-left: -5px;
-            background: #3d5977;
-            //background:$primary;
+            //background: #3d5977;
+            background: #346DDB;
             border-left: 1px solid;
             font-weight: 700;
         }
