--- a/_includes/home-icon.html
+++ b/_includes/home-icon.html
@@ -4,5 +4,5 @@
             <a href="{{ site.baseurl }}/" ><i class="fas fa-home"></i></a>
         </li>
     </ul>
-    <p style="color: white;">Share</p> <!-- It's a code smell to be fixed later -->
+    <p style="color: #f2f2f2;">Share</p> <!-- It's a code smell to be fixed later -->
 </div>
