--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,7 @@
     {% if site.mailchimp-list %}
     <!-- Newsletter -->
     <div class="newsletter text-center">
-        <span class="h4"><!--<img src="{{ site.baseurl }}/{{ site.logo }}" class="newsletter-logo" alt="{{site.title}}"> &nbsp;-->If you like our <b>posts</b> and don't want to miss any of them, sign up for our newsletter.</span>
+        <span class="h4"><!--<img src="{{ site.baseurl }}/{{ site.logo }}" class="newsletter-logo" alt="{{site.title}}"> &nbsp;-->If you like our posts and don't want to miss any of them, sign up for our newsletter.</span>
         <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate" target="_blank" novalidate>
             <div class="mc-field-group d-inline-flex">
             <input type="email" placeholder="Your e-mail" name="EMAIL" class="required email" id="mce-EMAIL" autocomplete="on" required>
