--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -536,11 +536,13 @@ img, img:hover {
     code {
         //color: #e83e8c;
         font-family: 'IBM Plex Mono', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-        color: rgba(0, 0, 0, 0.7);
+        //color: rgba(0, 0, 0, 0.7);
+        color: rgb(199, 37, 78);
         color-scheme: light;
         display: inline;
         //background-color: rgb(242, 242, 242);
-        background-color: #EAEDED;
+        //background-color: #EAEDED;
+        background-color: rgb(249, 242, 244);
         box-sizing: border-box;
         font-weight: 400;
         line-height: 20.992px;
