--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -29,19 +29,18 @@
         <div class="card-footer">    
             <div class="wrapfooter">
                 {% if post.author %}
-                <span class="meta-footer-thumb">
-                {% if author.avatar %}
-                <img class="author-thumb" src="{{site.baseurl}}/{{ author.avatar }}" alt="{{ author.display_name }}">
-                {% else %}
-                <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
+                    <span class="meta-footer-thumb">
+                    {% if author.avatar %}
+                        <img class="author-thumb" src="{{site.baseurl}}/{{ author.avatar }}" alt="{{ author.display_name }}">
+                    {% else %}
+                        <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
+                    {% endif %}
+                    </span>
+                    <span class="author-meta">
+                        <span class="post-name font-weight-bold">{{ author.display_name }}</span><br/>
                 {% endif %}
-                </span>
-                <span class="author-meta">
-                <span class="post-name font-weight-bold">{{ author.display_name }}</span> 
-                {% endif %}
-                
-                <span class="post-date">{{ post.date | date_to_string | date: "%b %-d, %Y" }} - {% include read-time.html %}</span>
-                </span>
+                        <span class="post-date">{{ post.date | date_to_string | date: "%b %-d, %Y" }} - {% include read-time.html %}</span>
+                    </span>
                 <div class="clearfix"></div>
                 <!-- Tags -->
                 <div>
