--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -359,7 +359,7 @@ img, img:hover {
         }
     }
     .post-date {
-        float:right;
+        //float:right;
         margin-top: 10px;
     }
     .img-thumb {
