--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,24 +18,24 @@ post_class: post-template
     <!-- Author and Date -->
     {% assign author = site.authors[page.author] %}
     {% if page.author %}
-    <div class="d-flex align-items-center mt-4" style="font-size: 85%">
-        <div>
-            {% if author.avatar %}
-            <img class="author-thumb" src="{{site.baseurl}}/{{ author.avatar }}" alt="{{ author.display_name }}">
-            {% else %}
-            <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
-            {% endif %}
-        </div>            
-        <div>
-            <b>{{ author.display_name }}</b><br/> 
-            <span class="post-date"><time class="post-date" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%b %-d, %Y" }}</time></span>           
-            {% if page.last_modified_at %}
-            (Updated: <time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time>)
-            {% endif %}
-            {% assign words = content | number_of_words %}
-            &nbsp;-&nbsp;{{ words | divided_by:180 }} Mins Read
-        </div>            
-    </div>
+        <div class="d-flex align-items-center mt-4" style="font-size: 85%">
+            <div>
+                {% if author.avatar %}
+                <img class="author-thumb" src="{{site.baseurl}}/{{ author.avatar }}" alt="{{ author.display_name }}">
+                {% else %}
+                <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
+                {% endif %}
+            </div>            
+            <div>
+                <b>{{ author.display_name }}</b><br/> 
+                <span class="post-date"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%b %-d, %Y" }}</time></span>           
+                {% if page.last_modified_at %}
+                    (Updated: <time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time>)
+                {% endif %}
+                {% assign words = content | number_of_words %}
+                &nbsp;-&nbsp;{{ words | divided_by:180 }} Mins Read
+            </div>            
+        </div>
     {% endif %}
 </div>
 
