--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -538,7 +538,8 @@ img, img:hover {
         //color: #e83e8c;
         font-family: 'IBM Plex Mono', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
         //color: rgba(0, 0, 0, 0.7);
-        color: rgb(199, 37, 78);
+        //color: rgb(199, 37, 78);
+        color: rgb(55, 71, 79);
         color-scheme: light;
         display: inline;
         //background-color: rgb(242, 242, 242);
