--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -68,7 +68,7 @@ post_class: post-template
 <!-- Draft - Shows writing in progress -->
 <div class="article-post">
     {% if page.draft %}
-        <span style="font-size: 90%; color:#CB4335;"><b>Writing in progress:</b> If you have any suggestions for improving the content or notice any inaccuracies, please email me at <a href="mailto:hello@towardsdata.dev">hello@towardsdata.dev</a>. Thanks!</span>        
+        <span style="font-size: 90%; color:#CB4335;"><b>Writing in progress:</b> If you have any suggestions for improving the content or notice any inaccuracies, please email us at <a href="mailto:hello@towardsdata.dev">hello@towardsdata.dev</a>. Thanks!</span>        
     {% endif %}
 </div>
 
