--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -73,8 +73,8 @@ body, input, button, select, optgroup, textarea {
     color-scheme: light;
 }
 body {
-    //line-height: 1.7;
-    line-height: 27px;
+    line-height: 1.7;
+    //line-height: 27px;
     background: $background-color;
 }
 a {
