--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,18 @@
     <a class="navbar-brand" href="{{ site.baseurl }}/">
         <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
     </a>
-      
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="https://fosstodon.org/@towardsdata" target="_blank" style="color:#616A6B; font-size: 25px;">
+        <i class="fab fa-mastodon"></i>
+    </a>
+    &nbsp;&nbsp;
+    <a href="https://twitter.com/towardsdata" target="_blank" style="color: #616A6B; font-size: 25px;">
+        <i class="fab fa-twitter"></i>
+    </a>
+    &nbsp;&nbsp;
+    <a href="https://www.instagram.com/towardsdata" target="_blank" style="color: #616A6B; font-size: 25px;">
+        <i class="fab fa-instagram"></i>
+    </a> 
     <hr class="grey_line"></hr>
 
     <!-- Site Tag or Title -->
