--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,38 @@ post_class: post-template
                 {% endif %}
             </div>            
             <div>
-                <b>{{ author.display_name }}</b><br/> 
+                <b>{{ author.display_name }}</b>
+                {% if author.web %}
+                    &nbsp;
+                    <a target="_blank" href="{{ author.web }}">
+                        <span style="color: #616A6B;">
+                            <i class="fa-solid fa-browser"></i>
+                        </span>                        
+                    </a>
+                {% endif %}                     
+                {% if author.mastodon %}
+                    &nbsp;
+                    <a target="_blank" href="{{ author.mastodon }}">
+                        <span style="color: #616A6B;">
+                            <i class="fa-solid fa-mastodon"></i>
+                        </span>                         
+                    </a>                
+                {% endif %}                
+                {% if author.twitter %}
+                    &nbsp;
+                    <a target="_blank" href="{{ author.twitter }}">
+                        <span style="color: #616A6B;">
+                            <i class="fa fa-twitter"></i>
+                        </span>
+                    </a>                
+                {% endif %}
+                {% if author.instagram %}
+                    &nbsp;
+                    <a target="_blank" href="{{ author.instagram }}" style="color:#616A6B">
+                        <i class="fa-brands fa-square-instagram"></i>
+                    </a>                
+                {% endif %}                                   
+                <br/> 
                 <span class="post-date"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%b %-d, %Y" }}</time></span>           
                 {% if page.last_modified_at %}
                     (Updated: <time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time>)
