--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,6 @@
 
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 
-<!--<link rel="stylesheet" href="https://kit.fontawesome.com/a04651ccb8.css" crossorigin="anonymous">
-<script src="https://kit.fontawesome.com/a04651ccb8.js" crossorigin="anonymous"></script>-->
 <script src="https://kit.fontawesome.com/a04651ccb8.js" crossorigin="anonymous"></script>
 
 </head>
@@ -77,16 +75,22 @@
             <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
         </a>
         &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://fosstodon.org/@towardsdata" target="_blank" style="color:#616A6B; font-size: 25px;">
-            <i class="fab fa-mastodon"></i>
+        <a href="https://fosstodon.org/@towardsdata" target="_blank" style="text-decoration: none;">
+            <span style="color:#616A6B; font-size: 25px;">
+                <i class="fa-brands fa-mastodon"></i>
+            </span>
         </a>
         &nbsp;&nbsp;
-        <a href="https://twitter.com/towardsdata" target="_blank" style="color: #616A6B; font-size: 25px;">
-            <i class="fab fa-twitter"></i>
+        <a href="https://twitter.com/towardsdata" target="_blank" style="text-decoration: none;">
+            <span style="color:#616A6B; font-size: 25px;">
+                <i class="fa-brands fa-twitter"></i>
+            </span>
         </a>
         &nbsp;&nbsp;
-        <a href="https://www.instagram.com/towardsdata" target="_blank" style="color: #616A6B; font-size: 25px;">
-            <i class="fab fa-instagram"></i>
+        <a href="https://www.instagram.com/towardsdata" target="_blank" style="text-decoration: none;">
+            <span style="color:#616A6B; font-size: 25px;">
+                <i class="fa-brands fa-square-instagram"></i>
+            </span>
         </a> 
         <hr class="grey_line"></hr>
 
