--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,32 +30,34 @@ post_class: post-template
                 <b>{{ author.display_name }}</b>
                 {% if author.web %}
                     &nbsp;
-                    <a target="_blank" href="{{ author.web }}">
+                    <a target="_blank" href="{{ author.web }}" style="text-decoration: none;">
                         <span style="color: #616A6B;">
-                            <i class="fa-solid fa-browser"></i>
+                            <i class="fa-solid fa-window-maximize"></i>
                         </span>                        
                     </a>
                 {% endif %}                     
                 {% if author.mastodon %}
                     &nbsp;
-                    <a target="_blank" href="{{ author.mastodon }}">
+                    <a target="_blank" href="{{ author.mastodon }}" style="text-decoration: none;">
                         <span style="color: #616A6B;">
-                            <i class="fa-solid fa-mastodon"></i>
+                            <i class="fa-brands fa-mastodon"></i>
                         </span>                         
                     </a>                
                 {% endif %}                
                 {% if author.twitter %}
                     &nbsp;
-                    <a target="_blank" href="{{ author.twitter }}">
+                    <a target="_blank" href="{{ author.twitter }}" style="text-decoration: none;">
                         <span style="color: #616A6B;">
-                            <i class="fa fa-twitter"></i>
+                            <i class="fa-brands fa-twitter"></i>
                         </span>
                     </a>                
                 {% endif %}
                 {% if author.instagram %}
                     &nbsp;
-                    <a target="_blank" href="{{ author.instagram }}" style="color:#616A6B">
-                        <i class="fa-brands fa-square-instagram"></i>
+                    <a target="_blank" href="{{ author.instagram }}" style="text-decoration: none;">
+                        <span style="color: #616A6B;">
+                            <i class="fa-brands fa-square-instagram"></i>
+                        </span>
                     </a>                
                 {% endif %}                                   
                 <br/> 
