Twitter Icon updated and contents as well

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,7 +82,7 @@
         &nbsp;&nbsp;
         <a href="https://twitter.com/towardsdata" target="_blank" style="text-decoration: none;">
             <span style="color:#616A6B; font-size: 25px;">
-                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-x-twitter"></i>
             </span>
         </a>
         &nbsp;&nbsp;
