--- a/_includes/search-lunr.html
+++ b/_includes/search-lunr.html
@@ -6,7 +6,9 @@
 
 <div class="wrap-search">
     <div class="d-flex align-items-center ml-auto">
-        <i class="fas fa-search show-search"></i>
+        <span style="color:#000000; font-size: 25px;">
+            <i class="fas fa-search show-search"></i>
+        </span>
         <form class="bd-search ml-3" onSubmit="return lunr_search(document.getElementById('lunrsearch').value);">
             <input type="text" class="form-control bigradius text-small launch-modal-search" id="lunrsearch" name="q" maxlength="255" value="" placeholder="Type and enter..."/>
         </form>
