--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,17 +47,17 @@
                                 </a>
                                 &nbsp;&nbsp;
                                 <a href="https://twitter.com/thoughtfulwx" target="_blank" style="text-decoration: none;">
-                                    <span style="color:#000000; font-size: 25px;">
+                                    <span style="color:#fff; font-size: 25px;">
                                         <i class="fa-brands fa-x-twitter"></i>
                                     </span>
                                 </a>
                                 <a href="https://www.instagram.com/thoughtful.works/" target="_blank" style="text-decoration: none;">
-                                    <span style="color:#000000; font-size: 25px;">
+                                    <span style="color:#fff; font-size: 25px;">
                                         <i class="fa-brands fa-square-instagram"></i>
                                     </span>
                                 </a> 
                                 <a href="https://github.com/thoughtfulworks?tab=repositories" target="_blank" style="text-decoration: none;">
-                                    <span style="color:#000000; font-size: 25px;">
+                                    <span style="color:#fff; font-size: 25px;">
                                         <i class="fa-brands fa-github"></i>
                                     </span>
                                 </a>
