--- a/_includes/search-lunr.html
+++ b/_includes/search-lunr.html
@@ -6,7 +6,7 @@
 
 <div class="wrap-search">
     <div class="d-flex align-items-center ml-auto">
-        <span style="color:#000000; font-size: 25px;">
+        <span style="color:#fff; font-size: 25px;">
             <i class="fas fa-search show-search"></i>
         </span>
         <form class="bd-search ml-3" onSubmit="return lunr_search(document.getElementById('lunrsearch').value);">
