--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,23 +1,18 @@
 <div class="share">
-    <ul>
+    <!-- <ul>
         <li class="ml-1 mr-1">
             <a href="{{ site.baseurl }}/" ><i class="fas fa-home"></i></a>
         </li>
     </ul>
-    <hr>
+    <hr> -->
     <!--{% unless page.url contains "contact" or page.url contains "about" %}-->
-    <p>Share</p>
+    <span>Share</span>
     <ul>
         <li class="ml-1 mr-1">
             <a target="_blank" href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ page.url | absolute_url }}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-                <i class="fab fa-x-twitter"></i>
+                <i class="fa-brands fa-x-twitter"></i>
             </a>
         </li>
-        <!--<li class="ml-1 mr-1">
-            <a target="_blank" href="https://facebook.com/sharer.php?u={{ page.url | absolute_url }}" onclick="window.open(this.href, 'facebook-share', 'width=550,height=435');return false;">
-                <i class="fab fa-facebook-f"></i>
-            </a>
-        </li>-->
         <li class="ml-1 mr-1">
             <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | absolute_url }}" onclick="window.open(this.href, 'width=550,height=435');return false;">
                 <i class="fab fa-linkedin-in"></i>
@@ -32,12 +27,12 @@
             <a target="_blank" href="http://www.reddit.com/submit?url={{ page.url | absolute_url }}&title={{ page.title }}" onclick="window.open(this.href, 'width=550,height=435');return false;">
                 <i class="fab fa-reddit"></i>
             </a>
-        </li>                 
+        </li>-->                 
         <li class="ml-1 mr-1">
             <a target="_blank" href="https://api.whatsapp.com/send?text={{ page.title }}%20{{ page.url | absolute_url }}" onclick="window.open(this.href, 'width=550,height=435');return false;">
                 <i class="fab fa-whatsapp"></i>
             </a>
-        </li>-->
+        </li>
         <li class="ml-1 mr-1">
             <a href="#" onclick="copyToClipboard()">
                 <i class="fas fa-link"></i>
