--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -162,7 +162,8 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 .bigradius {
-    border-radius: 40px;
+    border-radius: 5px;
+    border-color: #fff;
 }
 .mb-neg-30 {
     margin-bottom:-30px;
@@ -496,6 +497,7 @@ img, img:hover {
         &:hover {
             background: $primary;
             text-decoration: none;
+            color: #fff;
         }
     }
     a, span  {
@@ -1011,8 +1013,8 @@ ul.tags li a {
     font-size: small;
 }
 ul.tags li a:hover {
-    background: rgba(203, 73, 73, 0.15);
-    color: rgb(203, 73, 73);
+    background: rgba(107, 151, 255, 0.15);
+    color: #000;
     text-decoration: none;
 }
 
